[tool.poetry]
name = "sprout-material"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
nbconvert = "^7.16.4"
pandoc = "^2.4"
iplantuml = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
